Fixed UI overflowing on the right side

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body{
-  min-width: 350px;
+  min-width: 330px;
   min-height: 230px;
 }
 
